--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "Just a simple web server written in NodeJS to experiment with kubernetes",
   "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/PraveenMut/kubernetes-web-server.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
